[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Weapons/Knife.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.25
bottom_radius = 0.25

[sub_resource type="Animation" id=2]
resource_name = "knife_equip"
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -5, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 7.65643e-020, 4.37897e-013, -1.00179e-005 ), Vector3( -90, 1.00179e-005, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -90, 0, 0 ), Vector3( -90, 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 5 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -90, 1.00179e-005, 0 ), Vector3( -90, 1.00179e-005, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "knife_unequip"
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -5, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -90, -1.00179e-005, 0 ), Vector3( 7.65643e-020, 4.37897e-013, -1.00179e-005 ) ]
}

[node name="Knife" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, -1.74845e-007, -7.64273e-015, 0, -4.37114e-008, 1, -1.74845e-007, -1, -4.37114e-008, 0, 0, 2 )
mesh = SubResource( 1 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/knife_equip = SubResource( 2 )
anims/knife_idle = SubResource( 3 )
anims/knife_stab = SubResource( 4 )
anims/knife_unequip = SubResource( 5 )

[node name="StabTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="EquipTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StabTimer" to="." method="_on_StabTimer_timeout"]
[connection signal="timeout" from="EquipTimer" to="." method="_on_EquipTimer_timeout"]
